--- a/packaging/winget/OpenCLICollective.gmail-ro.installer.yaml
+++ b/packaging/winget/OpenCLICollective.gmail-ro.installer.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
-PackageIdentifier: OpenCliCollective.gmail-ro
+PackageIdentifier: OpenCLICollective.gmail-ro
 PackageVersion: 0.0.0
 InstallerType: zip
 NestedInstallerType: portable
