--- a/packaging/winget/OpenCLICollective.gmail-ro.locale.en-US.yaml
+++ b/packaging/winget/OpenCLICollective.gmail-ro.locale.en-US.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
-PackageIdentifier: OpenCliCollective.gmail-ro
+PackageIdentifier: OpenCLICollective.gmail-ro
 PackageVersion: 0.0.0
 PackageLocale: en-US
 Publisher: Open CLI Collective
