--- a/packaging/winget/OpenCLICollective.gmail-ro.yaml
+++ b/packaging/winget/OpenCLICollective.gmail-ro.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.10.0.schema.json
 
-PackageIdentifier: OpenCliCollective.gmail-ro
+PackageIdentifier: OpenCLICollective.gmail-ro
 PackageVersion: 0.0.0
 DefaultLocale: en-US
 ManifestType: version
