fix: correct test workflows for CLI and PowerShell syntax
- test-chocolatey: use 'gmro version' subcommand instead of '--version' flag
- test-winget: simplify checksum replacement (PowerShell -replace doesn't support count arg)

--- a/.github/workflows/test-chocolatey.yml
+++ b/.github/workflows/test-chocolatey.yml
@@ -61,10 +61,10 @@ jobs:
       - name: Verify installation
         shell: pwsh
         run: |
-          Write-Host "Testing gmro --version..."
-          gmro --version
+          Write-Host "Testing gmro version..."
+          gmro version
           if ($LASTEXITCODE -ne 0) {
-            Write-Error "gmro --version failed"
+            Write-Error "gmro version failed"
             exit 1
           }
           Write-Host "gmro is working!"
