feat: add Linux distribution support (Snap, APT, RPM)
- Add nfpms section to goreleaser for .deb/.rpm package generation
- Add snap/snapcraft.yaml for Snap Store publishing (as ocli-gmail)
- Add snap job to release workflow (disabled pending interface approval)
- Add linux-packages job to trigger APT/RPM repo updates
- Update README with comprehensive Linux installation instructions

Closes #69

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -37,6 +37,23 @@ archives:
       - LICENSE
       - README.md
 
+# Linux packages (.deb and .rpm)
+nfpms:
+  - id: gmro
+    package_name: gmro
+    vendor: Open CLI Collective
+    homepage: https://github.com/open-cli-collective/gmail-ro
+    maintainer: Open CLI Collective <https://github.com/open-cli-collective>
+    description: Read-only command-line interface for Gmail
+    license: MIT
+    formats:
+      - deb
+      - rpm
+    bindir: /usr/bin
+    contents:
+      - src: LICENSE
+        dst: /usr/share/licenses/gmro/LICENSE
+
 checksum:
   name_template: "checksums.txt"
 
